2005-03-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py:
	(__item_revision_is_current): return false if no
	current revision.
	(__unpack): create the revisions directory. Use the
	list of files and directories in the metadata to
	figure out what to unpack. Fixes problems with adding
	empty dirs.
	(add): don't copy previous revision if it doesn't
	exist.
	(save.zip_directory): remove unused param.
	(save): consolidate duplicate code paths
	
	* lib/sources/gconfsource.py:
	(sync): only add directories to storage if they exist.
	(apply): only extract directories if they exist.
	
	* lib/sources/filessource.py: don't pre-format the
	debugging string since the path can contain '%'
	
	* lib/sources/paneldelegate.py: ditto.

2005-03-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py: fix spelling error pointed out
	by Adam Weinberger <adamw@gnome.org> in bug #168843

2005-02-28  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/profilesdialog.py: fix bug with cancel
	on the new profile dialog.
	
	* lib/config.py.in: move the Xnest window name to
	
	* lib/protosession.py: here so we don't try and
	reference _() before its defined.
	
	* lib/storage.py: add a needs_saving flag so that
	saving an empty and non-existant profile works.

2005-02-28  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/profilesdialog.py:
	(__create_new_profile): upd to use new ProfileStorage
	API.
	
	* admin-tool/monitorwindow.py,
	  admin-tool/sabayon-apply.py,
	  admin-tool/sabayon-session.py,
	  admin-tool/sabayon-monitor.py: pass about
	the profile name instead of the profile path.
	
	
	* lib/storage.py: allow a profile name to be an
	absolute path. Kill "running_unit_tests" hack.
	
	* lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/userprofile.py:
	(run_unit_tests): fix to work with new ProfileStoage
	API.
	
	* lib/README.storage: remove, its out of date
	and we've inline docs now.

2005-02-28  Mark McLoughlin  <markmc@redhat.com>
